# mwe-cpp-exception

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
include/: API.hpp
include/detail/: Exception.hpp  Library.hpp
src/: API.cpp
src/detail/: Exception.cpp  Library.cpp
